--- a/static/css/form.css
+++ b/static/css/form.css
@@ -116,6 +116,7 @@ button:hover {
 .buttons {
     display: flex;
     justify-content: space-between;
+    padding: 0 80px;
 }
 
 /* Barra de progreso */
@@ -290,8 +291,25 @@ button:hover {
     margin-top: 40px;
     padding-left: 180px;  
     padding-right: 180px;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
 }
+
+
+.contenedor-tablas-una {
+    width: 100%;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+#tablaEducacion {
+    width: 100%;
+}
+
+.tabla-educacion {
+    width: 100%;
+    /*max-width: 1800px; /* controla el ancho visual */
+}
+
 
 .tabla-resumen {
     width: 100%;
@@ -320,26 +338,25 @@ button:hover {
 .print-only {
     display: none;
 }
-/*
-.velocimetro_container {
-    width: 500px;
-    height: 500px;
-    border: 9px solid black;
-    border-radius: 50%;
-    margin: 50px auto;
-    position: relative;
+
+.tabla-educacion {
+    width: 100%;
+    table-layout: fixed;
+    text-align: center;
 }
 
-.punto_central {
-    width: 20px;
-    height: 20px;
-    background-color: black;
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}*/
+.tabla-resumen th,
+.tabla-resumen td {
+    width: auto;
+    text-align: center;
+}
+
+
+.contendor_educacion {
+    width: 70%;
+    /*max-width: 1100px;*/
+    margin: 40px auto;
+}
 
 
 .velocimetro_container {
@@ -349,6 +366,34 @@ button:hover {
     position: relative;
     margin-top: 50px;
 }
+
+.resumen_cobertura {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.label_porcentaje {
+    font-size: 32px;
+    font-weight: 600;
+    color: #000;
+}
+
+.label_estado {
+    font-size: 16px;
+    font-weight: 700;
+    margin-top: 4px;
+}
+
+.label_consejo {
+    font-size: 14px;
+    color: #666;
+    font-style: italic;
+    margin-top: 6px;
+    max-width: 520px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 
 .semicirculo {
     width: 100%;
@@ -362,14 +407,43 @@ button:hover {
     overflow: hidden;
 }
 
-.arco_fill {
-    width: 100%;
-    height: 100%;
+.tapa_interior {
     position: absolute;
     bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+
+    width: 80%;        /* controla grosor del anillo */
+    height: 80%;
+
+    background: #cecece; /* mismo color del fondo */
+    border-top-left-radius: 1000px;
+    border-top-right-radius: 1000px;
+}
+
+
+.td-money {
+    text-align: left;
+    white-space: nowrap;
+}
+
+.td-total {
+    text-align: center;
+    font-weight: 700;
+}
+
+
+.arco_fill {
+    width: 100%;
+    height: 200%;
+    position: absolute;
+    /*bottom: 0;*/
+    top: -100;
     left: 0;
 
-    transform-origin: bottom center;
+    border-radius: 50%;
+
+    /*transform-origin: bottom center;
 
     border-top-left-radius: 50px;
     border-top-right-radius: 50px;
@@ -381,7 +455,7 @@ button:hover {
         green 45deg 117deg,
         blue 117deg 180deg
     );
-    /*transition: backgou;*/
+    transition: backgou;*/
 }
 
 
@@ -481,6 +555,14 @@ button:hover {
         color: #555;
         margin-top: 30px;
         text-align: center;
+    }
+
+    .buttons {
+        display: none !important;
+    }
+
+    button {
+        display: none !important;
     }
     /*
     .tabla-resumen th {
